icanio-project/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icanio-app
  labels:
    app: icanio-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: icanio-app
  template:
    metadata:
      labels:
        app: icanio-app
    spec:
      containers:
        - name: icanio-app-cont
          image: 403884667137.dkr.ecr.ap-south-1.amazonaws.com/icanio-repo:latest
          ports:
            - containerPort: 5000
