icanio-project/k8s/node-exporter-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: node-exporter
  namespace: monitoring

spec:
  type: LoadBalancer

  selector:
    app: node-exporter

  ports:
    - port: 9100
      targetPort: 9100
