icanio-project/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icanio-app

spec:
  selector:
    app: icanio-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: LoadBalancer
